maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: value North is not a member of object plm.universe.Direction
	while (getDirection() == Direction.North){
                                           ^