maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while (getDirection() == Direction.North){
     	while (estFaceMur()){
			droite()
		}
		avance()	
	}
	
}
    

